--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sanity": "^3.72.1",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "swiper": "^11.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/swiper": "^5.4.3",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "postcss": "^8",
