--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-sanity": "^9.8.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.15.1",
     "sanity": "^3.72.1",
     "styled-components": "^6.1.14",
     "swiper": "^11.2.2"
